fix horizontal scrollbar

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -35,6 +35,7 @@ html, body {
     in this case html and body */
     height:100%;
     min-height:100%;
+
     -webkit-font-smoothing:antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -78,7 +79,6 @@ header nav>ul>li>a:hover {
     vertical-align: middle;
     text-align: center;
     padding-top: 1px;
-    border-radius: 5px;
     height:300px;
     background-size: 100%;
 }
